# ntt-voxel-game-engine

./: .clang-format  .gitignore  README.md  dependencies.json  helper.py  meed.code-workspace  meed.code-workspace.in
app/: .gitignore  CMakeLists.txt
app/config/: common.cfg  debug.cfg  release.cfg  web.cfg
app/public/: index.html  server.py
app/public/shaders/: triangle.frag  triangle.vert
app/src/: main.c
autogen/: binding.py  main.py  settings.json  template_gen.py
autogen/analyze/: parser.py
autogen/models/: binding.py  template.py
autogen/templates/: binding.j2  pyi.j2
autogen/templates/binding/: enum.j2  function.j2  struct.j2
autogen/templates/pyi/: enum.j2  function.j2  struct.j2  typedef.j2
autogen/tests/binding/: test_generate_binding_enum.py  test_generate_binding_function.py  test_generate_binding_struct.py  test_generate_pyi_enum.py  test_generate_pyi_function.py  test_generate_pyi_struct.py  test_generate_pyi_typedef.py
autogen/tests/utils/: test_assert.py
autogen/utils/: cache.py  dependencies_utils.py  system_info.py
cmake/: MEEDConfigure.cmake.in  MEEDEngineConfig.cmake  MEEDGlfwConfig.cmake  MEEDVulkanConfig.cmake  MEEDpybind11Config.cmake  googletestConfig.cmake
config/: args.py  conf.py  conf.py.in  system_info.py
config/utils/: cpp_utils.py  python_utils.py  utils.py
editor/: .gitignore  convert.py  main.py  requirements.txt
editor/assets/uis/: mainwindow.ui
editor/utils/: __init__.py  file_cache.py
editor/views/: main_window.py
engine/: .clang-format  CMakeLists.txt  debug.cfg
engine/assets/shaders/: triangle.frag  triangle.vert
engine/assets/shaders/opengl/: triangle.frag  triangle.vert
engine/assets/shaders/vulkan/: triangle.vert
engine/assets/shaders/web/: triangle.frag  triangle.vert
engine/config/: debug.cfg
engine/examples/: CMakeLists.txt  console.c  file.c  linked_list.c  memory.c  release_stack.c  render.c  window.c
engine/include/MEEDEngine/: MEEDEngine.h
engine/include/MEEDEngine/core/: core.h
engine/include/MEEDEngine/core/containers/: callback.h  containers.h  dynamic_array.h  linked_list.h  set.h  stack.h
engine/include/MEEDEngine/core/data/: color.h
engine/include/MEEDEngine/core/log/: types.h
engine/include/MEEDEngine/core/string/: string.h
engine/include/MEEDEngine/modules/: modules.h
engine/include/MEEDEngine/modules/release_stack/: release_stack.h
engine/include/MEEDEngine/modules/render/: pipeline.h  render.h  renderer.h  shader.h  vertex_buffer.h
engine/src/core/containers/: dynamic_array.c  linked_list.c  set.c  stack.c
engine/src/core/data/: color.c
engine/src/core/string/: string.c
engine/src/modules/release_stack/: release_stack.c
engine/src/modules/render/: opengl_common.h  pipeline_opengl.c  pipeline_vulkan.c  render_common.c  render_common.h  renderer_opengl.c  renderer_vulkan.c  shader_opengl.c  shader_vulkan.c  vertex_buffer_opengl.c  vertex_buffer_vulkan.c  vertext_buffer_vulkan.c  vulkan_common.h
engine/tests/: CMakeLists.txt  common.hpp  linked_list_test.cpp  main.cpp
engine/tests/core/containers/: container_common.hpp  dynamic_array_test.cpp  linked_list_test.cpp  set_test.cpp  stack_test.cpp
